--- a/puppet/macmanagement_project/hiera/puppetdb.got.private.yaml
+++ b/puppet/macmanagement_project/hiera/puppetdb.got.private.yaml
@@ -1,7 +1,9 @@
 ---
 pdb_mode: 'pdb'
 pdb_puppetserver: 'puppetserver.got.private'
-pdb_fw_on: false
+pdb_fw_on: true
+firewall_linux_ssh_access:
+ - '0.0.0.0/0'
 localadmin_linuxadmins:
   localadmin:
    local_admin: 'localadmin'
