adds the munki::client hiera entry for munki server

--- a/puppet/macmanagement_project/hiera/munki.got.private.yaml
+++ b/puppet/macmanagement_project/hiera/munki.got.private.yaml
@@ -1,5 +1,6 @@
 ---
 munki::server: true
+munki::client: false
 munki::sambauser: localadmin
 munki::sambapassword: 'Passw0rd'
 munki::repositories: [ en, fi ]
