removes an obsolete line from autopkg hiera file

--- a/puppet/macmanagement_project/hiera/autopkg.got.private.yaml
+++ b/puppet/macmanagement_project/hiera/autopkg.got.private.yaml
@@ -26,4 +26,4 @@ autopkg::repositories:
   fi:
     'recipe_repos': "hjuutilainen/autopkg-virustotalanalyzer hjuutilainen-recipes arubdesu-recipes jleggat-recipes jessepeterson-recipes n8felton-recipes"
     'recipes': "Firefox.munki.recipe GoogleChrome.munki.recipe"
-autopkg::munki_server: munki.got.private---
+autopkg::munki_server: munki.got.private
