updates to hiera files

--- a/puppet/macmanagement_project/hiera/client.got.private.yaml
+++ b/puppet/macmanagement_project/hiera/client.got.private.yaml
@@ -1,1 +1,7 @@
 ---
+munki::server: false
+munki::client: true
+munki::munkitools: 'https://github.com/munki/munki/releases/download/v2.8.1/munkitools-2.8.1.2845.pkg'
+munki::appleupdatesonly: 0
+munki::installappleupdates: 0
+munki::munkirepo: 'https://munki.got.private/munki/en'
